--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,5 +1,5 @@
 meta_product_name: "Cookclever"
 meta_title: "Cookclever - the clever, sustainable and easy way of cooking"
-meta_description: "Relevant description"
+meta_description: "Explore tasty recipes, pick up the ingredients at your local supermarket and save food by doing so! "
 meta_image: "cooking.png" # should exist in `app/assets/images/`
 twitter_account: "@Cookclever"
